--- a/AppMVC/appsettings.json
+++ b/AppMVC/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=estoque;User Id=frego;Password='123456';TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-QKTOETE\\SQLEXPRESS;Database=estoque;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
